_sass/_code.scss
pre {
    font-family: Consolas, "Liberation Mono", Courier, monospace;
    font-size: 12px;
    border: 1px solid $border-color;
    background: #fff;
    overflow: hidden;
    @include border-radius(5px);
    padding: 10px;
    margin: 5px;
}

